insightwires added json based configs for all id extraction

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_USER=insightwireadmin
-POSTGRES_PASSWORD=InsightWire_JPL_2025
-POSTGRES_HOST=insightwiresfinal.c7yekk48a7a7.eu-north-1.rds.amazonaws.com
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=InsightWires2025
+POSTGRES_HOST=database-1.cdw2owaw049h.eu-north-1.rds.amazonaws.com
 POSTGRES_PORT=5432
-POSTGRES_DB=news_analytics
+POSTGRES_DB=insightwiredb
 # Add these to your existing .env file
 SECRET_KEY=insightwires-secret-key-2025
 API_KEY=insightwires-api-key-2025
